RESOLVED FIXED30433
Chrome doesn't set Content-Type for file upload when the file extension is not recognized
https://bugs.webkit.org/show_bug.cgi?id=30433
Summary Chrome doesn't set Content-Type for file upload when the file extension is no...
Adam Barth
Reported 2009-10-16 01:14:30 PDT
http://code.google.com/p/chromium/issues/detail?id=6800 Patch forthcoming, but I haven't the foggiest idea how to write a test case.
Attachments
Patch v1 (2.27 KB, patch)
2009-10-16 01:18 PDT, Adam Barth
no flags
Patch v1 (1.52 KB, patch)
2009-10-16 01:20 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2009-10-16 01:18:29 PDT
Created attachment 41275 [details] Patch v1
Adam Barth
Comment 2 2009-10-16 01:20:13 PDT
Created attachment 41276 [details] Patch v1
Mark Rowe (bdash)
Comment 3 2009-10-16 03:15:20 PDT
Comment on attachment 41276 [details] Patch v1 > Index: WebCore/platform/chromium/MimeTypeRegistryChromium.cpp It’s sad that this file doesn’t match the case used in the name of the class and in the equivalent files used by other platforms. r=me
Adam Barth
Comment 4 2009-10-16 09:20:40 PDT
Comment on attachment 41276 [details] Patch v1 Clearing flags on attachment: 41276 Committed r49682: <http://trac.webkit.org/changeset/49682>
Adam Barth
Comment 5 2009-10-16 09:20:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.