2009-10-16  Adam Barth  <abarth@webkit.org>

Reviewed by Mark Rowe.

        Chrome doesn't set Content-Type for file upload when the file extension
        is not recognized
        https://bugs.webkit.org/show_bug.cgi?id=30433

        Apparently, getMIMETypeForPath is supposed to return
        application/octet-stream when it doesn't have a better MIME type.

        * platform/chromium/MimeTypeRegistryChromium.cpp:
        (WebCore::MIMETypeRegistry::getMIMETypeForPath):


Canonical link: https://commits.webkit.org/41142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49682 268f45cc-cd09-0410-ab3c-d52691b4dbfc